--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.5.0",
     "tslint-plugin-prettier": "^2.0.0",
-    "typescript": "^2.9.2",
+    "typescript": "^3.2.4",
     "url-loader": "^1.0.1",
     "wait-on": "^3.0.1",
     "webpack": "^4.25.1",
@@ -158,7 +158,7 @@
     "webpack-sources": "^1.1.0",
     "webpack-virtual-modules": "^0.1.10",
     "whatwg-fetch": "^2.0.4",
-    "tsutils":"3.7.0"
+    "tsutils":"^3.7.0"
   },
   "optionalDependencies": {
     "dotenv": "^6.0.0",
