--- a/modules/module/server-ts/package.json
+++ b/modules/module/server-ts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gqlapp/module-server-ts",
   "version": "0.0.1",
-  "private": true,
+  "prefab": "modules/module/server-ts",
   "dependencies": {
     "@gqlapp/module-common": "^0.0.1"
   }
