--- a/modules/module/common/package.json
+++ b/modules/module/common/package.json
@@ -4,5 +4,8 @@
   "prefab": "modules/module/common",
   "dependencies": {
     "fractal-objects": "^0.10.0"
+  },
+  "peerDependencies": {
+    "i18next": "*"
   }
 }
