--- a/packages/server-java/build.gradle
+++ b/packages/server-java/build.gradle
@@ -27,15 +27,21 @@ subprojects {
 	}
 
 	dependencies {
-		compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.2.RELEASE'
-		compile group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
-		compile group: 'com.graphql-java', name: 'graphiql-spring-boot-starter', version: '5.0.2'
-		compile group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'
+		implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.2.RELEASE'
+		implementation group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
+		implementation group: 'com.graphql-java', name: 'graphiql-spring-boot-starter', version: '5.0.2'
+		implementation group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'
+
+		// https://projectlombok.org
+		compileOnly 'org.projectlombok:lombok:1.18.4'
+		annotationProcessor 'org.projectlombok:lombok:1.18.4'
+
+		testImplementation group: 'com.graphql-java', name: 'graphql-spring-boot-starter-test', version: '5.0.2'
 	}
 }
 
 project(':app') {
 	//REQUIRED
-	dependencies { compile project(':counter') }
+	dependencies { implementation project(':counter') }
 }
 
