--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -42,7 +42,6 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.18",
-    "@material-ui/core": "^3.8.3",
     "@gqlapp/chat-client-react": "^0.1.0",
     "@gqlapp/contact-client-react": "^0.1.0",
     "@gqlapp/core-client-react": "^0.1.0",
@@ -53,6 +52,8 @@
     "@gqlapp/module-client-react": "^0.1.0",
     "@gqlapp/payments-client-react": "^0.1.0",
     "@gqlapp/validation-common-react": "^0.1.0",
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
     "antd": "^3.10.0",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
