--- a/packages/server-java/build.gradle
+++ b/packages/server-java/build.gradle
@@ -28,6 +28,8 @@ subprojects {
 
 	dependencies {
 		implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.2.RELEASE'
+		implementation group: 'com.h2database', name: 'h2', version: '1.4.197'
+		implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.2.RELEASE'
 		implementation group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
 		implementation group: 'com.graphql-java', name: 'graphiql-spring-boot-starter', version: '5.0.2'
 		implementation group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'
