Add server and graphql configuration.

--- a/packages/server-java/app/src/main/resources/application.properties
+++ b/packages/server-java/app/src/main/resources/application.properties
@@ -1,13 +1,28 @@
+# ===============================
+# Server
+# ===============================
+server.port=8080
+server.address=127.0.0.1
+
+# ===============================
+# GraphQL
+# ===============================
+graphql.servlet.mapping=/graphql
+graphql.servlet.subscriptions.websocket.path=/subscriptions
+graphiql.enabled=true
+graphiql.mapping=/graphiql
+
+# ===============================
 # To See H2 Console in Browser:
-# http://localhost:8080/h2
+# http://${server.address}:${server.port}/h2-console
 # Enabling H2 Console
+# ===============================
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.path=/h2-console
 
 # ===============================
 # DB
 # ===============================
-
 spring.datasource.url=jdbc:h2:mem:apollo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -16,7 +31,6 @@ spring.datasource.password=
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
