--- a/tools/customRules/eslint/package.json
+++ b/tools/customRules/eslint/package.json
@@ -13,7 +13,8 @@
     "test": "mocha tests --recursive"
   },
   "dependencies": {
-    "requireindex": "~1.1.0"
+    "requireindex": "~1.1.0",
+    "read-pkg-up": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "~3.9.1",
