Convert Vue-client into TypeScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
   "include": [
     "**/typings.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "**/*.vue"
   ],
   "exclude": [
     "node_modules"
