--- a/packages/server-java/app/src/main/resources/application.properties
+++ b/packages/server-java/app/src/main/resources/application.properties
@@ -7,6 +7,7 @@ server.address=127.0.0.1
 # ===============================
 # GraphQL
 # ===============================
+graphql.servlet.enabled=true
 graphql.servlet.mapping=/graphql
 graphql.servlet.subscriptions.websocket.path=/subscriptions
 graphiql.enabled=true
