--- a/packages/server-java/app/src/main/resources/application.properties
+++ b/packages/server-java/app/src/main/resources/application.properties
@@ -12,6 +12,7 @@ graphql.servlet.mapping=/graphql
 graphql.servlet.subscriptions.websocket.path=/subscriptions
 graphiql.enabled=true
 graphiql.mapping=/graphiql
+graphql.servlet.subscriptions.apollo.keep-alive-enabled=false
 
 # ===============================
 # To See H2 Console in Browser:
