--- a/packages/server-java/app/src/main/resources/application.properties
+++ b/packages/server-java/app/src/main/resources/application.properties
@@ -13,6 +13,7 @@ graphql.servlet.subscriptions.websocket.path=/subscriptions
 graphiql.enabled=true
 graphiql.mapping=/graphiql
 graphql.servlet.subscriptions.apollo.keep-alive-enabled=false
+graphql.servlet.exception-handlers-enabled=true
 
 # ===============================
 # To See H2 Console in Browser:
