Configure QueryComplexity and QueryDepth.

--- a/packages/server-java/app/src/main/resources/application.properties
+++ b/packages/server-java/app/src/main/resources/application.properties
@@ -10,10 +10,12 @@ server.address=127.0.0.1
 graphql.servlet.enabled=true
 graphql.servlet.mapping=/graphql
 graphql.servlet.subscriptions.websocket.path=/subscriptions
-graphiql.enabled=true
-graphiql.mapping=/graphiql
 graphql.servlet.subscriptions.apollo.keep-alive-enabled=false
 graphql.servlet.exception-handlers-enabled=true
+graphql.servlet.maxQueryComplexity=1000
+graphql.servlet.maxQueryDepth=15
+graphiql.enabled=true
+graphiql.mapping=/graphiql
 
 # ===============================
 # To See H2 Console in Browser:
