--- a/tools/customRules/eslint/package.json
+++ b/tools/customRules/eslint/package.json
@@ -10,7 +10,10 @@
   "author": "SysGears INC",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha tests --recursive"
+    "start test": "npm-run-all -s renameForTest test renameForBuild",
+    "renameForTest": "bash ./renameForTests.sh commandFirst",
+    "test" : "mocha tests --recursive",
+    "renameForBuild": "bash ./renameForTests.sh"
   },
   "dependencies": {
     "requireindex": "^1.1.0",
@@ -18,7 +21,8 @@
   },
   "devDependencies": {
     "eslint": "~3.9.1",
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "npm-run-all": "^4.1.5"
   },
   "engines": {
     "node": ">=0.10.0"
