--- a/tools/customRules/tslint/tsconfig.json
+++ b/tools/customRules/tslint/tsconfig.json
@@ -12,6 +12,9 @@
     },
     "exclude": [
         "./buildRules",
-      "../rules"
+        "../rules"
+    ],
+    "include": [
+        "**/typings.d.ts"
     ]
 }
