--- a/packages/server-java/settings.gradle
+++ b/packages/server-java/settings.gradle
@@ -1,4 +1,5 @@
-include ':app', ':core', ':counter'
+include ':app', ':core', ':counter', ':user'
 
 project(':core').projectDir = new File('../../modules/core/server-java')
 project(':counter').projectDir = new File('../../modules/counter/server-java')
+project(':user').projectDir = new File('../../modules/user/server-java')
