Add support async operations to repositories.

--- a/packages/server-java/app/src/main/resources/application.properties
+++ b/packages/server-java/app/src/main/resources/application.properties
@@ -18,6 +18,8 @@ graphiql.enabled=true
 graphiql.mapping=/graphiql
 graphiql.endpoint.subscriptions=/graphql
 
+graphql.servlet.async-mode-enabled=true
+
 # ===============================
 # To See H2 Console in Browser:
 # http://${server.address}:${server.port}/h2-console
