Add lodash dep back, it is needed for settings

--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "opencollective": "^1.0.3"
   },
   "resolutions": {
