--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -70,7 +70,7 @@
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
     "formik": "^1.3.1",
-    "graphql": "^0.13.0",
+    "graphql": "^14.1.1",
     "graphql-iso-date": "^3.5.0",
     "graphql-tag": "^2.6.0",
     "history": "^4.7.2",
@@ -80,7 +80,7 @@
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
     "prop-types": "^15.6.0",
-    "react": "16.5.0",
+    "react": "^16.8.0",
     "react-apollo": "^2.3.1",
     "react-art": "16.5.0",
     "react-cookie": "^2.2.0",
