--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -82,10 +82,10 @@
     "prop-types": "^15.6.0",
     "react": "^16.8.0",
     "react-apollo": "^2.3.1",
-    "react-art": "16.5.0",
+    "react-art": "^16.8.0",
     "react-cookie": "^2.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "16.5.0",
+    "react-dom": "^16.8.0",
     "react-dropzone": "^4.2.3",
     "react-ga": "^2.3.5",
     "react-helmet": "^5.2.0",
@@ -111,7 +111,7 @@
     "@types/lodash": "^4.14.112",
     "@types/mocha": "^5.2.5",
     "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.5",
+    "@types/react-dom": "^16.8.0",
     "@types/react-helmet": "^5.0.6",
     "@types/react-native": "^0.55.7",
     "@types/react-navigation": "^2.0.24",
@@ -134,7 +134,7 @@
     "mocha-steps": "^1.1.0",
     "mocha-webpack": "^2.0.0-beta.0",
     "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^16.8.1",
     "react-testing-library": "^3.0.2",
     "request": "^2.83.0",
     "rimraf": "^2.6.2"
