--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -109,12 +109,12 @@
     "performance-now": "^2.1.0",
     "pg": "^7.4.0",
     "prop-types": "^15.6.0",
-    "react": "16.5.0",
+    "react": "^16.8.0",
     "react-apollo": "^2.3.1",
-    "react-art": "16.5.0",
+    "react-art": "^16.8.0",
     "react-cookie": "^2.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "16.5.0",
+    "react-dom": "^16.8.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -146,7 +146,7 @@
     "@types/knex": "^0.14.20",
     "@types/mkdirp": "^0.5.2",
     "@types/nodemailer": "^4.6.2",
-    "@types/react-dom": "^16.0.5",
+    "@types/react-dom": "^16.8.0",
     "@types/serialize-javascript": "^1.3.2",
     "@types/shortid": "0.0.29",
     "@types/stripe": "^5.0.21",
@@ -165,7 +165,7 @@
     "mocha-steps": "^1.1.0",
     "mocha-webpack": "^2.0.0-beta.0",
     "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^16.8.1",
     "request": "^2.83.0",
     "resolve-url-loader": "^2.2.1",
     "rimraf": "^2.6.2",
