--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -85,7 +85,7 @@
     "graphql-tools": "^2.13.0",
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
-    "mocha-webpack": "^2.0.0-beta.0",
+    "mochapack": "^1.0.0",
     "rimraf": "^2.6.2"
   },
   "peerDependencies": {
