--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -103,7 +103,7 @@
     "mkdirp": "^0.5.1",
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
-    "mocha-webpack": "^2.0.0-beta.0",
+    "mochapack": "^1.0.0",
     "request": "^2.83.0",
     "rimraf": "^2.6.2"
   },
