--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -132,7 +132,7 @@
     "mkdirp": "^0.5.1",
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
-    "mocha-webpack": "^2.0.0-beta.0",
+    "mochapack": "^1.0.0",
     "react-addons-test-utils": "^16.0.0-alpha.3",
     "react-test-renderer": "^16.8.1",
     "react-testing-library": "^3.0.2",
