--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -109,7 +109,7 @@
     "mkdirp": "^0.5.1",
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
-    "mocha-webpack": "^2.0.0-beta.0",
+    "mochapack": "^1.0.0",
     "react-addons-test-utils": "^16.0.0-alpha.3",
     "react-test-renderer": "16.5.0",
     "request": "^2.83.0",
