--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react-hooks": "^1.0.1",
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "heroku-babel-loader": "^8.0.4",
