--- a/modules/core/server-ts/package.json
+++ b/modules/core/server-ts/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gqlapp/core-common": "^0.1.0"
+    "@gqlapp/core-common": "^0.1.0",
+    "@hofstadter-io/sofa-api": "^0.2.4",
+    "swagger-ui-express": "^4.0.2",
+    "@types/swagger-ui-express": "^3.0.0"
   }
 }
 
