--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "tslint-config-prettier": "^1.5.0",
     "tslint-plugin-prettier": "^2.0.0",
     "typescript": "^3.2.4",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.0.1",
     "vue-loader": "^15.5.1",
     "vue-style-loader": "^4.1.2",
