--- a/packages/server-java/build.gradle
+++ b/packages/server-java/build.gradle
@@ -58,6 +58,7 @@ project(':app') {
 	dependencies {
 		implementation project(':counter')
         implementation project(':user')
+        implementation project(':post')
     }
 }
 
