Change name of spinjs to @larix/zen

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "build": "lerna run build --stream",
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
-    "watch": "spin watch",
-    "watch:vue": "spin -d client -e vue watch",
-    "watch:angular": "spin -d client -e angular watch",
-    "watch:android": "spin -e android -d react -d ios watch",
-    "watch:ios": "spin -e ios -d react -d android watch",
+    "watch": "zen watch",
+    "watch:vue": "zen -d client -e vue watch",
+    "watch:angular": "zen -d client -e angular watch",
+    "watch:android": "zen -e android -d react -d ios watch",
+    "watch:ios": "zen -e ios -d react -d android watch",
     "watch-client": "cross-env DISABLE_SSR=true lerna run --scope=client watch --stream",
     "cli": "node tools/cli",
     "stripe:setup": "lerna run --scope=server stripe:setup",
@@ -104,6 +104,7 @@
     "@babel/preset-typescript": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@larix/zen": "^0.1.1",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.6",
     "babel-plugin-import": "^1.7.0",
@@ -144,7 +145,6 @@
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.1",
     "source-list-map": "^2.0.0",
-    "spinjs": "^0.4.191",
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
