--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -8,15 +8,15 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production spin build",
+    "build": "cross-env NODE_ENV=production zen build",
     "clean": "rimraf build .tmp",
-    "tests": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace \"../../modules/**/client-angular/**/*.spec.*\" \"src/**/*.spec.*\"",
-    "tests:watch": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --full-trace --watch \"../../modules/**/client-angular/**/*.spec.*\" \"src/**/*.spec.*\"",
+    "tests": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --full-trace \"../../modules/**/client-angular/**/*.spec.*\" \"src/**/*.spec.*\"",
+    "tests:watch": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --full-trace --watch \"../../modules/**/client-angular/**/*.spec.*\" \"src/**/*.spec.*\"",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
     "lint": "yarn eslint && yarn tslint",
-    "watch": "spin watch",
+    "watch": "zen watch",
     "heroku-postbuild": "yarn build"
   },
   "repository": {
@@ -89,7 +89,7 @@
     "rimraf": "^2.6.2"
   },
   "peerDependencies": {
-    "spinjs": "^0.4.0"
+    "@larix/zen": "^0.1.0"
   },
   "browserslist": {
     "development": [
