--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,11 +8,11 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production spin build",
+    "build": "cross-env NODE_ENV=production zen build",
     "clean": "rimraf build .tmp",
     "start": "node --harmony build",
-    "tests": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --include src/__tests__/entry.ts --full-trace \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
-    "tests:watch": "cross-env NODE_ENV=test PORT=7070 spin test -t 10000 --include src/__tests__/entry.ts --full-trace --watch \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
+    "tests": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/entry.ts --full-trace \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
+    "tests:watch": "cross-env NODE_ENV=test PORT=7070 zen test -t 10000 --include src/__tests__/entry.ts --full-trace --watch \"src/**/*.spec.*\" \"../../modules/**/server-ts/**/*.spec.*\"",
     "test": "yarn tests && yarn lint",
     "eslint": "eslint --fix --ext js --ext jsx --ext json src",
     "tslint": "tslint --fix -p tsconfig.json -c ../../tslint.json",
@@ -20,7 +20,7 @@
     "seed": "yarn migrate && knex seed:run",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "watch": "spin watch",
+    "watch": "zen watch",
     "heroku-postbuild": "yarn build && yarn seed && yarn stripe:setup",
     "cli": "node ../../tools/cli",
     "stripe:setup": "node ../../modules/payments/server-ts/stripe/subscription/cli/stripeSetup"
@@ -172,6 +172,6 @@
     "ws": "^5.1.1"
   },
   "peerDependencies": {
-    "spinjs": "^0.4.0"
+    "@larix/zen": "^0.1.0"
   }
 }
