Implement mutations for User module

--- a/packages/server-java/app/.env
+++ b/packages/server-java/app/.env
@@ -12,8 +12,8 @@ DB_SSL=
 
 # Auth
 AUTH_SECRET=secret, change for production
-FACEBOOK_CLIENTID=
-FACEBOOK_CLIENTSECRET=
+FACEBOOK_CLIENTID=1988312327890352
+FACEBOOK_CLIENTSECRET=6d1faa82f6e50a0ac1cc1bb09a18407c
 GITHUB_CLIENTID=
 GITHUB_CLIENTSECRET=
 LINKEDIN_CLIENTID=
