--- a/packages/server-java/build.gradle
+++ b/packages/server-java/build.gradle
@@ -1,24 +1,34 @@
 buildscript {
+
+	ext {
+		springBootPlugin = 'org.springframework.boot:spring-boot-gradle-plugin'
+		springBootVersion = '2.1.3.RELEASE'
+		ltgtPlugin = 'net.ltgt.gradle:gradle-apt-plugin'
+		ltgtVersion = '0.21'
+	}
+
 	repositories {
 		maven {
 			url "https://plugins.gradle.org/m2/"
 		}
 	}
+
 	dependencies {
-		classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.2.RELEASE"
-		classpath "net.ltgt.gradle:gradle-apt-plugin:0.21"
+		classpath("${springBootPlugin}:${springBootVersion}")
+		classpath("${ltgtPlugin}:${ltgtVersion}")
 	}
 }
-
 
 subprojects {
 	apply plugin: 'java'
 	apply plugin: 'org.springframework.boot'
 	apply plugin: 'io.spring.dependency-management'
 	apply plugin: 'net.ltgt.apt'
-	
+	apply plugin: 'application'
+
 	sourceCompatibility = JavaVersion.VERSION_11
-	
+	targetCompatibility = JavaVersion.VERSION_11
+
 	repositories {
 		jcenter()
 		mavenCentral()
@@ -28,28 +38,33 @@ subprojects {
 		enabled=true
 	}
 
+	bootJar {
+		launchScript()
+		mainClassName = 'graphql.App'
+		classifier = 'boot'
+	}
+
 	dependencies {
 		//SpringBoot
-		implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.2.RELEASE'
-		implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.2.RELEASE'
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 		//GraphQL
-		implementation group: 'com.graphql-java-kickstart', name: 'graphql-java-tools', version: '5.4.1'
-		implementation group: 'com.graphql-java-kickstart', name: 'graphql-spring-boot-starter', version: '5.4.1'
-		implementation group: 'com.graphql-java-kickstart', name: 'graphiql-spring-boot-autoconfigure', version: '5.4.1'
-		testImplementation group: 'com.graphql-java-kickstart', name: 'graphql-spring-boot-starter-test', version: '5.4.1'
+		implementation 'com.graphql-java-kickstart:graphql-java-tools:5.5.1'
+		implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.7.0'
+		implementation 'com.graphql-java-kickstart:graphiql-spring-boot-autoconfigure:5.7.0'
+		testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:5.7.0'
 
-		implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.6'
+		implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
 
 		//H2 DataBase
-		implementation group: 'com.h2database', name: 'h2', version: '1.4.197'
+		implementation 'com.h2database:h2:1.4.198'
 		// https://projectlombok.org
-		compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-		annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+		compileOnly 'org.projectlombok:lombok:1.18.6'
+		annotationProcessor 'org.projectlombok:lombok:1.18.6'
 
 		//DotEnv support
-		implementation group: 'io.github.cdimascio', name: 'java-dotenv', version: '3.1.7'
-
+		implementation 'io.github.cdimascio:java-dotenv:5.0.0'
 	}
 }
 
