--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@larix/zen": "^0.1.2",
+    "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.6",
     "babel-plugin-import": "^1.7.0",
