--- a/modules/database/server-ts/package.json
+++ b/modules/database/server-ts/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gqlapp/core-common": "^0.1.0",
-    "glob": "^7.1.3",
-    "tmp": "^0.0.33"
+    "@gqlapp/core-common": "^0.1.0"
   }
 }
