--- a/modules/database/server-ts/package.json
+++ b/modules/database/server-ts/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@gqlapp/core-common": "^0.1.0",
-    "glob": "^7.1.3"
+    "glob": "^7.1.3",
+    "tmp": "^0.0.33"
   }
 }
