--- a/modules/core/server-ts/package.json
+++ b/modules/core/server-ts/package.json
@@ -17,12 +17,14 @@
     "react-dom": "*",
     "react-helmet": "^5.2.0",
     "react-router": "^4.2.0",
+    "styled-components": "*",
     "serialize-javascript": "^1.3.2",
     "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.6",
     "@types/serialize-javascript": "^1.3.2",
+    "@types/styled-components": "^4.1.12",
     "@types/swagger-ui-express": "^3.0.0"
   },
   "peerDependencies": {
@@ -34,7 +36,6 @@
     "react-apollo": "*",
     "react-redux": "*",
     "react-router": "*",
-    "styled-components": "*",
     "subscriptions-transport-ws": "*"
   }
 }
