--- a/modules/page-not-found/client-react/package.json
+++ b/modules/page-not-found/client-react/package.json
@@ -7,7 +7,8 @@
     "@gqlapp/i18n-client-react": "^0.1.0",
     "@gqlapp/look-client-react": "^0.1.0",
     "@gqlapp/module-client-react": "^0.1.0",
-    "@gqlapp/settings-common": "^0.1.0"
+    "@gqlapp/settings-common": "^0.1.0",
+    "styled-components": "*"
   },
   "devDependencies": {
     "@gqlapp/testing-client-react": "^0.1.0",
@@ -18,7 +19,6 @@
     "prop-types": "*",
     "react": "*",
     "react-router-dom": "*",
-    "react-helmet": "*",
-    "styled-components": "*"
+    "react-helmet": "*"
   }
 }
