--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -59,10 +59,7 @@
     "@gqlapp/router-client-react": "^0.1.0",
     "@gqlapp/upload-client-react": "^0.1.0",
     "@gqlapp/validation-common-react": "^0.1.0",
-    "@gqlapp/user-client-react": "^0.1.0",
-    "graphql": "^14.1.1",
-    "graphql-tools": "^4.0.4",
-    "styled-components": "^3.2.6"
+    "@gqlapp/user-client-react": "^0.1.0"
   },
   "devDependencies": {
     "@gqlapp/core-common": "^0.1.0",
@@ -70,11 +67,9 @@
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.8.0",
     "@types/react-router-dom": "^4.2.7",
-    "babel-plugin-styled-components": "^1.3.0",
     "mochapack": "^1.1.1"
   },
   "peerDependencies": {
-    "autoprefixer": "*",
     "@larix/zen": "*"
   },
   "browserslist": {
