Clean up vue and angular packages deps

--- a/modules/core/client-angular/package.json
+++ b/modules/core/client-angular/package.json
@@ -19,6 +19,7 @@
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
-    "autoprefixer": "*"
+    "autoprefixer": "*",
+    "angular2-template-loader": "^0.6.2"
   }
 }
