--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -60,6 +60,7 @@
     "@gqlapp/core-common": "^0.1.0",
     "@gqlapp/database-server-ts": "^0.1.0",
     "@gqlapp/testing-server-ts": "^0.1.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/pdfmake": "^0.1.3",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
