Add server-ts-rest to workspaces

--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "modules/**/client-vue",
     "modules/**/common",
     "modules/**/common-react",
-    "modules/**/server-ts"
+    "modules/**/server-ts",
+    "modules/**/server-ts-rest"
   ],
   "greenkeeper": {
     "ignore": [
