--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "workspaces": [
     "packages/*",
     "modules/**/client-react",
+    "modules/**/client-react-rest",
     "modules/**/client-react-native",
     "modules/**/client-angular",
     "modules/**/client-vue",
