Extend ServerModule with GraphQLSErverModule & Update dependencies

--- a/modules/graphql/server-ts/package.json
+++ b/modules/graphql/server-ts/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@gqlapp/graphql-server-ts",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@gqlapp/module-server-ts": "^0.1.0"
+  }
 }
 
