--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -55,9 +55,9 @@
     "angular2-template-loader": "^0.6.2",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.4.0",
+    "apollo-cache": "^1.1.25",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
-    "apollo-cache": "^1.1.25",
     "apollo-client": "^2.4.7",
     "apollo-link": "^1.0.6",
     "apollo-link-batch-http": "1.2.2",
@@ -73,6 +73,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@larix/zen": "^0.1.11",
     "@types/chai": "^4.1.4",
     "@types/lodash": "^4.14.118",
     "@types/mocha": "^5.2.5",
