--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "logo": "https://opencollective.com/opencollective/logo.txt"
   },
   "devDependencies": {
+    "@alienfast/i18next-loader": "^1.0.15",
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -103,7 +104,7 @@
     "@babel/preset-typescript": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@larix/zen": "^0.1.12",
+    "@larix/zen": "^0.1.13",
     "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.6",
