Upgrade redux and font-awesome

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,9 +39,10 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-brands": "^5.0.6",
-    "@fortawesome/react-fontawesome": "0.0.18",
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@gqlapp/chat-client-react": "^0.1.0",
     "@gqlapp/contact-client-react": "^0.1.0",
     "@gqlapp/core-client-react": "^0.1.0",
@@ -53,7 +54,7 @@
     "@gqlapp/payments-client-react": "^0.1.0",
     "@gqlapp/reports-client-react": "^0.1.0",
     "@gqlapp/validation-common-react": "^0.1.0",
-    "antd": "^3.10.0",
+    "antd": "^3.16.6",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.4.7",
@@ -66,6 +67,7 @@
     "apollo-upload-client": "^8.0.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
+    "connected-react-router": "^6.4.0",
     "error-stack-parser": "^2.0.1",
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
@@ -90,14 +92,13 @@
     "react-ga": "^2.3.5",
     "react-helmet": "^5.2.0",
     "react-i18next": "^7.6.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^6.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
     "react-stripe-elements": "^1.2.1",
     "react-transition-group": "^2.3.0-beta.0",
     "reactstrap": "^5.0.0-beta",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.2",
     "sourcemapped-stacktrace": "^1.1.8",
     "styled-components": "^3.2.6",
@@ -113,9 +114,8 @@
     "@types/react-helmet": "^5.0.6",
     "@types/react-native": "^0.55.7",
     "@types/react-navigation": "^3.0.5",
-    "@types/react-redux": "^6.0.4",
+    "@types/react-redux": "^6.0.1",
     "@types/react-router-dom": "^4.2.7",
-    "@types/react-router-redux": "^5.0.16",
     "@types/react-stripe-elements": "^1.1.7",
     "@types/webpack-env": "^1.13.6",
     "apollo-utilities": "^1.0.3",
@@ -124,7 +124,7 @@
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.1",
     "dom-testing-library": "^3.13.0",
-    "eslint": "^4.13.1",
+    "eslint": "^5.16.0",
     "graphql-tools": "^2.13.0",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
