--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "@babel/preset-typescript": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@larix/zen": "^0.1.13",
+    "@larix/zen": "^0.1.14",
     "autoprefixer": "^9.5.0",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.6",
@@ -160,7 +160,7 @@
     "vue-loader": "^15.5.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.22",
-    "wait-on": "^3.0.1",
+    "wait-on": "^3.2.0",
     "webpack": "^4.29.3",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
@@ -176,6 +176,9 @@
     "opencollective": "^1.0.3"
   },
   "resolutions": {
+    "fbjs": "^1.0.0",
+    "kleur": "^3.0.3",
+    "ant-design-palettes": "npm:@ant-design/colors",
     "immutability-helper": "2.8.1",
     "graphql": "14.1.1",
     "iterall": "^1.2.2",
