--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,14 +19,14 @@
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.0",
     "apollo-utilities": "^1.0.11",
+    "connected-react-router": "^6.4.0",
     "graphql": "^14.1.1",
     "i18next": "^11.2.3",
     "i18next-browser-languagedetector": "^2.1.0",
     "lodash": "^4.17.4",
     "minilog": "^3.1.0",
     "react-i18next": "^7.6.0",
-    "react-router-redux": "^5.0.0-alpha.8",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.2",
     "subscriptions-transport-ws": "^0.9.4"
   },
@@ -34,7 +34,7 @@
     "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/react-i18next": "^7.8.3",
     "chai": "^4.1.2",
-    "eslint": "^4.13.1",
+    "eslint": "^5.16.0",
     "mocha": "^5.1.1",
     "mocha-steps": "^1.1.0",
     "mochapack": "^1.0.0"
